<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="K"
        android:dialogTitle="@string/prefTitleTemp"
        android:entries="@array/tempUnitNames"
        android:entryValues="@array/tempUnits"
        android:key="tempUnit"
        android:summary="@string/prefSummaryTemp"
        android:title="@string/prefTitleTemp" />
    <ListPreference
        android:defaultValue="category"
        android:dialogTitle="@string/prefTitleColors"
        android:entries="@array/elementColorNames"
        android:entryValues="@array/elementColors"
        android:key="elementColors"
        android:summary="@string/prefSummaryColors"
        android:title="@string/prefTitleColors" />
    <ListPreference
        android:defaultValue="Number"
        android:dialogTitle="@string/titleSort"
        android:entries="@array/sortFieldNames"
        android:entryValues="@array/sortField"
        android:key="sortBy"
        android:summary="@string/prefSummarySort"
        android:title="@string/titleSort" />
</PreferenceScreen>
